--- a/src/components/ProjectCard/ProjectCard.scss
+++ b/src/components/ProjectCard/ProjectCard.scss
@@ -3,18 +3,20 @@
 
 .project-card {
   height: 90vh;
-  margin: 10px;
   padding: 10px;
   display: grid;
   grid-template-rows: repeat(3), auto;
+  border-top: 1px solid $text-primary;
 
   &__banner {
-    height: 60vh;
+    
+    padding: 10px;
     width: 100%;
     background-color: $color-accent;
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 10px;
 
     @include tablet {
       flex-direction: row;
@@ -23,9 +25,19 @@
       padding: 10px;
     }
 
+    &--img {
+      width: 75%;
+      margin-bottom: 10px;
+
+      @include tablet {
+        height: 95%;
+        width: auto;
+      }
+    }
+
     &--desc {
       background-color: transparent;
-      color: $color-secondary;
+      color: $color-background;
       height: 40%;
       width: 90%;
 
@@ -35,13 +47,5 @@
       }
     }
 
-    &--img {
-      width: 75%;
-
-      @include tablet {
-        height: 95%;
-        width: auto;
-      }
-    }
   }
 }
